--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-1">
   <div>
-    <nav class="flex items-center justify-between flex-wrap bg-red-500 p-6">
+    <nav class="flex items-center justify-between flex-wrap bg-slate-400 p-4">
       <div class="flex items-center flex-shrink-0 text-white mr-6">
         <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
         <span class="font-semibold text-xl tracking-tight">Closir</span>
@@ -26,9 +26,11 @@
           
         </div>
         <div>
-          <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white 
-            border-slate-600 hover:border-transparent  mt-4 lg:mt-0 bg-slate-600">
-            Login
+          <a href="#" class="inline-block text-lg px-3 py-2 leading-none border rounded text-white 
+            border-slate-600 hover:border-transparent  mt-4 lg:mt-0 bg-gray-900">
+            <b>
+              Login
+            </b>
           </a>
         </div>
       </div>
@@ -36,30 +38,49 @@
   </div>
 
 
-  <div class="">
+  <div class="grid grid-cols-4">
     <div
       class="sidebar top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900 min-h-screen"
     >
       
       <div
-        class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer
+         hover:bg-slate-400 text-white"
+         (click)="navigateToTodo()"
       >
         <i class="bi bi-house-door-fill"></i>
-        <span class="text-[15px] ml-4 text-gray-200 font-bold">Home</span>
+        <span class="text-[15px] ml-4 text-gray-200 font-bold">TODO</span>
       </div>
       <div
-        class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer 
+        hover:bg-slate-400 text-white"
+        (click)="navigateToChart()"
       >
         <i class="bi bi-bookmark-fill"></i>
-        <span class="text-[15px] ml-4 text-gray-200 font-bold">Bookmark</span>
+        <span class="text-[15px] ml-4 text-gray-200 font-bold">Charts</span>
+      </div>
+      <div
+        class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer 
+        hover:bg-slate-400 text-white"
+        (click)="navigateToAbout()"
+      >
+        <i class="bi bi-bookmark-fill"></i>
+        <span class="text-[15px] ml-4 text-gray-200 font-bold">About</span>
       </div>
       <div class="my-4 bg-gray-600 h-[1px]"></div>
       <div
-        class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer
+        hover:bg-slate-400 text-white"
+        (click)="navigateToContact()"
       >
         <i class="bi bi-box-arrow-in-right"></i>
-        <span class="text-[15px] ml-4 text-gray-200 font-bold">Logout</span>
+        <span class="text-[15px] ml-4 text-gray-200 font-bold">Contact</span>
       </div>
+    </div>
+
+    <div class="col-span-3 box-border	p-4">
+      <router-outlet></router-outlet>
+      
     </div>
 
   </div>
@@ -68,4 +89,4 @@
 </div>
 
 
-<router-outlet></router-outlet>
+
