--- a/src/app/components/todo/todo-input/todo-input.component.html
+++ b/src/app/components/todo/todo-input/todo-input.component.html
@@ -1,5 +1,6 @@
 <div class="flex">
-    <input class="flex-1" type="text" placeholder="Ex. Meditate">
+    <input class="flex-1 outline-none
+    bg-slate-100 mr-2 p-2" type="text" placeholder="Ex. Meditate">
     <button class="cursor-pointer px-8 py-2  
      hover:bg-blue-500 bg-blue-400 rounded text-white font-semibold">Add</button>
-</div>
+</div> 
