--- a/src/app/components/todo/todo-list/todo-list.component.html
+++ b/src/app/components/todo/todo-list/todo-list.component.html
@@ -1,11 +1,5 @@
-<ul>
+<ul *ngFor="let todo of todos">
     <li>
-        <app-todo-item></app-todo-item>
-    </li>
-    <li>
-        <app-todo-item></app-todo-item>
-    </li>
-    <li>
-        <app-todo-item></app-todo-item>
+        <app-todo-item [data]="todo"></app-todo-item>
     </li>
 </ul>
