--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn{
+    @apply cursor-pointer px-8 py-2  
+    text-white font-semibold rounded
+}
+.blue{
+    @apply  hover:bg-blue-500 bg-blue-400 
+}
+.red{
+    @apply  hover:bg-red-500 bg-red-400 
+}
