--- a/src/app/components/todo/todo-input/todo-input.component.html
+++ b/src/app/components/todo/todo-input/todo-input.component.html
@@ -1,6 +1,16 @@
 <div class="flex">
-    <input class="flex-1 outline-none
-    bg-slate-100 mr-2 px-2" type="text" placeholder="Ex. Meditate"
+    <input class="input mr-2 px-2" type="text" placeholder="Ex. Meditate"
     #input (keyup)="getInputValue(input.value)">
     <button class="btn blue" (click)="addItem();input.value=''">Add</button>
+    <div *ngIf="showAlert" class="absolute bottom-0 right-0 text-white  px-6 py-4 border-0 rounded mb-4 bg-yellow-500">
+        <span class="text-xl inline-block mr-5 align-middle">
+          <i class="fas fa-bell"></i>
+        </span>
+        <span class="inline-block align-middle mr-8">
+          <b class="capitalize">Input warning!</b> please fill the input field
+        </span>
+        <button class="absolute bg-transparent text-2xl font-semibold leading-none right-0 top-0 mt-4 mr-6 outline-none focus:outline-none" (click)="showAlert = false">
+          <span>×</span>
+        </button>
+    </div>
 </div> 
