--- a/src/app/components/todo/todo-item/todo-item.component.html
+++ b/src/app/components/todo/todo-item/todo-item.component.html
@@ -7,11 +7,11 @@
         </ng-template>
     </div>
     <div class="flex">
-        <div *ngIf="!editTodo;else elseBlock" class="btn blue mr-2" (click)="updateToggle()" >Edit</div>
+        <button *ngIf="!editTodo;else elseBlock" class="btn blue mr-2" (click)="updateToggle()" >Edit</button>
         <ng-template #elseBlock>
             <button class="btn btn blue mr-2" (click)="updateToggle(); updateItem()">Update</button>
         </ng-template>
-        <div class="btn red" (click)="deleteItem()">Delete</div>
+        <button class="btn red" (click)="deleteItem()">Delete</button>
     </div>
 </div>
 <div *ngIf="showAlert" class="absolute bottom-0 right-0 text-white  px-6 py-4 border-0 rounded mb-4 bg-yellow-500">
