--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
   </div>
 
 
-  <div class="grid grid-cols-4">
+  <div class="grid grid-cols-4 ">
     <div
       class="sidebar top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900 min-h-screen"
     >
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <div class="col-span-3 box-border	p-4">
+    <div class="col-span-3 box-border	p-8 min-h-screen ">
       <router-outlet></router-outlet>
       
     </div>
