structuring charts design

--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,1 +1,11 @@
-<p>chart works!</p>
+<div class="min-h-screen grid grid-rows-4 grid-cols-4 gap-20 py-5">
+    <div class="row-span-2 col-span-4 shadow-lg hover:shadow-2xl rounded bg-gray-100 min-h-full px-3">
+        <app-xy-chart></app-xy-chart>
+    </div>
+    <div class=" row-span-2 col-span-2 shadow-lg hover:shadow-2xl rounded bg-gray-100 min-h-full p-5 ">
+        <app-pie-chart></app-pie-chart>
+    </div>
+    <div class="row-span-2 col-span-2 shadow-lg hover:shadow-2xl rounded bg-gray-100 min-h-full p-5">
+        <app-radar-chart></app-radar-chart>
+    </div>
+</div>
