--- a/src/app/components/todo/todo-input/todo-input.component.html
+++ b/src/app/components/todo/todo-input/todo-input.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
     <input class="input mr-2 px-2" type="text" placeholder="Ex. Meditate"
     #input (keyup)="getInputValue(input.value)">
-    <button class="btn blue" (click)="addItem();input.value=''">Add</button>
+    <app-button ngClass="btn blue" [message]="'Add'" (onClick)="addItem();input.value=''" ></app-button>
     <div *ngIf="showAlert" class="absolute bottom-0 right-0 text-white  px-6 py-4 border-0 rounded mb-4 bg-yellow-500">
         <span class="text-xl inline-block mr-5 align-middle">
           <i class="fas fa-bell"></i>
