add gauge chart component

--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -6,6 +6,6 @@
         <app-pie-chart></app-pie-chart>
     </div>
     <div class="row-span-2 col-span-2 shadow-lg hover:shadow-2xl rounded bg-gray-100 min-h-full p-5">
-        <app-radar-chart></app-radar-chart>
+        <app-gauge-chart></app-gauge-chart>
     </div>
 </div>
