--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,2 +1,5 @@
-<app-todo-input></app-todo-input>
-<app-todo-list></app-todo-list>
+<div class="p-8">
+    <app-todo-input></app-todo-input>
+    <app-todo-list></app-todo-list>
+</div>
+
