--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen grid grid-rows-4 grid-cols-4 gap-20 py-5">
+<div class="min-h-screen grid grid-rows-4 grid-cols-4 gap-20 p-10">
     <div class="row-span-2 col-span-4 shadow-lg hover:shadow-2xl rounded bg-gray-100 min-h-full px-3">
         <app-xy-chart></app-xy-chart>
     </div>
