--- a/src/app/components/todo/todo-input/todo-input.component.html
+++ b/src/app/components/todo/todo-input/todo-input.component.html
@@ -2,15 +2,5 @@
     <input class="input mr-2 px-2" type="text" placeholder="Ex. Meditate"
     #input (keyup)="getInputValue(input.value)">
     <app-button ngClass="btn blue" [message]="'Add'" (onClick)="addItem();input.value=''" ></app-button>
-    <div *ngIf="showAlert" class="absolute bottom-0 right-0 text-white  px-6 py-4 border-0 rounded mb-4 bg-yellow-500">
-        <span class="text-xl inline-block mr-5 align-middle">
-          <i class="fas fa-bell"></i>
-        </span>
-        <span class="inline-block align-middle mr-8">
-          <b class="capitalize">Input warning!</b> please fill the input field
-        </span>
-        <button class="absolute bg-transparent text-2xl font-semibold leading-none right-0 top-0 mt-4 mr-6 outline-none focus:outline-none" (click)="showAlert = false">
-          <span>×</span>
-        </button>
-    </div>
+    <app-alert [showAlert]="showAlert"></app-alert>
 </div> 
