move navigate functions to sideBarButton component

--- a/src/app/components/navigations/side-bar/side-bar.component.html
+++ b/src/app/components/navigations/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900 min-h-[150vh]">
-  <app-side-bar-button [text]="'Todo'" (onClick)="navigateToTodo()"></app-side-bar-button>
-  <app-side-bar-button [text]="'Charts'" (onClick)="navigateToChart()"></app-side-bar-button>
-  <app-side-bar-button [text]="'About'" (onClick)="navigateToAbout()"></app-side-bar-button>
+  <app-side-bar-button [text]="'Todo'"></app-side-bar-button>
+  <app-side-bar-button [text]="'Charts'"></app-side-bar-button>
+  <!-- <app-side-bar-button [text]="'About'" (onClick)="navigateToAbout()"></app-side-bar-button> -->
   <div class="my-4 bg-gray-600 h-[1px]"></div>
-  <app-side-bar-button [text]="'Contact'" (onClick)="navigateToContact()"></app-side-bar-button>
+  <app-side-bar-button [text]="'Contact'"></app-side-bar-button>
 </div>
