--- a/src/app/components/shared/side-bar-button/side-bar-button.component.html
+++ b/src/app/components/shared/side-bar-button/side-bar-button.component.html
@@ -1,6 +1,7 @@
 <div
     class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer
     hover:bg-slate-400 text-white"
+    (click)="navigate()"
 >
     <i class="bi bi-house-door-fill"></i>
     <span class="text-[15px] ml-4 text-gray-200 font-bold">{{text}}</span>
